# uci-adult-data-ml

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  repo_plan.md  requirements.txt
.cursor/agents/: data-pipeline.md  eda-analyst.md  fairness-analyst.md  interpretability-analyst.md  model-trainer.md  report-builder.md
.cursor/rules/: ml-no-leakage.mdc  project-conventions.mdc  traceability.mdc
.github/workflows/: ci.yml
configs/: model_spaces.yaml  project_config.yaml  report_config.yaml
docs/: architecture.md  cleaning_decisions.md  data_dictionary.md  decision_log.md  experiment_protocol.md  reproduction.md
docs/cursor_skills/: README.md
docs/model_cards/: lightgbm_final.md
notebooks/: 01_data_audit.ipynb  02_eda_feature_selection.ipynb  03_model_experiments.ipynb  04_interpretability_fairness.ipynb  05_report_figures.ipynb
reports/: artifact_inventory.md  findings_log.md  limitations.md  references.bib  report.md  report_outline.md  traceability_matrix.md  verification_report.md
reports/figures/: fig_01_missingness.png.meta.json  fig_02_target_distribution.png.meta.json  (+4 more)
scripts/: 00_setup_dirs.py  01_fetch_data.py  02_build_dataset.py  03_run_eda.py  04_train_baselines.py  05_tune_models.py  06_evaluate_final.py  07_run_interpretability.py  08_run_fairness.py  09_run_calibration.py  10_run_mlp_experiments.py  11_build_report_assets.py  12_verify_report_numbers.py
tests/: conftest.py  test_cleaning.py  test_data.py  test_evaluation.py  test_features.py  test_pipelines.py
(+47 files in other folders)
