[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adult-income-ml"
version = "0.1.0"
description = "Predicting high income from census attributes: classification, interpretability, and fairness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "shap>=0.44",
    "ucimlrepo>=0.0.7",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "pytest>=7.4",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "rich>=13.0",
    "tabulate>=0.9",
    "markdown>=3.5",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "torch>=2.0",
    "torchmetrics>=1.0",
]

[project.optional-dependencies]
dev = ["pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
